fix: set dark mode font color for course name

--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -10,6 +10,12 @@ ion-card-title {
   color: #222222;
 }
 
+@media (prefers-color-scheme: dark) {
+  .course-name {
+    color: #cccccc;
+  }
+}
+
 .small-text {
   color: #aaaaaa;
 }
